--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 	<div>
 		Paulinas Website
 	</div>
+	<div>
+		<a href="https://twitter.com/paulawielewski">Paula's Twitter</a>
+	</div>
+	<div>
+		<img src=file:///Users/paula/Documents/Bewerbung/Bewerbung_2014/Bewerbungs_Fotos/Studioline%20Photography%205%20(1).jpg
+		sizes="(min-width: 800px) 400px, 50vw">
+	</div>
+			
 </body>
 </html>
