--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-
+ <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body style="background-color: #FFC0CB">
+<body class="background-color-pink">
 	<div>
 		Paulinas Website
 	</div>
